Restrictions for state changes added